# swarm-nest

./: .dockerignore  .env.template  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini
.cursor/: settings.json
.ideconfig/: settings.json
app/: dependecies.py  main.py
app/config/: __init__.py  settings.py
app/core/: __init__.py  exceptions.py  logger.py
app/db/: __init__.py  base.py  ensure_db.py  session.py
app/db/models/: __init__.py  agent.py  graph.py  mixins.py  permission.py  prompt.py  role.py  tool.py  user.py
app/factories/: agent_factory.py  structured_output_factory.py
app/routers/: __init__.py  agent.py  health.py  prompt.py  role.py  tool.py  user.py
app/schemas/api/: __init__.py  base.py  health.py
app/schemas/db/: __init__.py  agent.py  base.py  permission.py  prompt.py  role.py  user.py
app/services/: __init__.py  database_service.py  tool_provider.py
app/tools/: __init__.py  weather.py
app/utils/: password.py
docs/: docker.md  template.md  testing.md
scripts/: setup.py
tests/: README.md  __init__.py  conftest.py
tests/integration/api/: test_health.py  test_root.py
tests/unit/core/: test_exceptions.py
tests/unit/factories/: __init__.py  test_agent_factory.py  test_structured_output_factory.py
tests/unit/services/: test_tool_provider.py
tests/unit/tools/: test_tools.py
